# eye-fixation-prediction

./: README.md  pyproject.toml
.devcontainer/: Dockerfile
src/: config.py  losses.py  train.py
src/models/: encoder.py
